--- a/18_login_board_springbootMVC/src/main/resources/templates/home.html
+++ b/18_login_board_springbootMVC/src/main/resources/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	  layout:decorate="~{layouts/layout}">
+     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+     layout:decorate="~{layouts/layout}">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
@@ -14,30 +14,9 @@
 </head>
 <body>
 <div layout:fragment="content">
-<div id="container">
-<th:block th:if="${session.mdto==null}">
-	<p>
-		<a href="/user/login">SignIn</a>
-		<a href="/user/addUser">SignUp</a>
-	</p>
-</th:block>
-<th:block th:unless="${session.mdto==null}">
-	<p>
-		<span th:text="${session.mdto.role}"></span>
-		<span th:text="${session.mdto.id}"></span>
-		<a href="/user/logout">로그아웃</a>
-	</p>
-</th:block>
+<div class="my_div my_bg">
+<p>메인</p>
 </div>
 </div>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
