--- a/18_login_board_springbootMVC/src/main/resources/templates/member/addUserForm.html
+++ b/18_login_board_springbootMVC/src/main/resources/templates/member/addUserForm.html
@@ -50,19 +50,58 @@
 		return true;
 	}
 </script>
+<link rel="stylesheet" href="css/login.css" />
 <style type="text/css">
+@charset "UTF-8";
 
+*{
+    padding: 0;
+    margin: 0;
+    border: none;
+}
+body{
+    background-color: gainsboro;
+    font-family: 'Roboto', sans-serif;
+}
+
+.login-wrapper{
+    width: 600px;
+    height: 1000px;
+    padding: 70px;
+    box-sizing: border-box;
+    margin: auto;
+}
+
+.login-wrapper h1{
+    font-size: 50px;
+    font-weight: bold;
+    color: #ff0000;
+    margin-bottom: 20px;
+}
+
+.btn{
+    color: black;
+    font-size: 16px;
+    background-color: #ff0000;
+    margin-top: 20px;
+    box-sizing: border-box;
+}
+
+
+
+.form-control{
+	padding:20px;
+}
 </style>
 </head>
 <body>
 <div layout:fragment="content">
-<div id="container">
-<h1>회원 가입</h1>
+<div  class="login-wrapper">
+<h1>SIGN UP</h1>
 	<form onsubmit="return submitChk()" action="/user/addUser" method="post" th:object="${addUserCommand}">
 		<table class="table">
 			<tr>
-				<th>아이디:</th>
-				<td><input th:field="*{id}" type="text" 
+				<td><input th:field="*{id}" type="text" placeholder="아이디"
 				              class="form-control" name="id" />
 				    <span id="idChk" class="n"></span>          
 					<span th:if="${#fields.hasErrors('id')}" 
@@ -70,32 +109,29 @@
 				</td>
 			</tr>
 			<tr>
-				<th>이름:</th>
-				<td><input th:field="*{name}" type="text" 
+				
+				<td><input th:field="*{name}" type="text" placeholder="이름"
 				              class="form-control" name="name" />
 					<span th:if="${#fields.hasErrors('name')}" 
 					      th:errors="*{name}" class="errorField"></span>
 				</td>
 			</tr>
 			<tr>
-				<th>비밀번호:</th>
-				<td><input th:field="*{password}" type="password" 
+				<td><input th:field="*{password}" type="password" placeholder="비밀번호"
 				              class="form-control" name="password" />
 					<span th:if="${#fields.hasErrors('password')}" 
 					      th:errors="*{password}" class="errorField"></span>
 				</td>
 			</tr>
 			<tr>
-				<th>이메일:</th>
-				<td><input th:field="*{email}" type="email" 
+				<td><input th:field="*{email}" type="email" placeholder="이메일"
 				              class="form-control" name="email" />
 					<span th:if="${#fields.hasErrors('email')}" 
 					      th:errors="*{email}" class="errorField"></span>
 				</td>
 			</tr>
 			<tr>
-				<th>주소:</th>
-				<td><input th:field="*{address}" type="text" 
+				<td><input th:field="*{address}" type="text" placeholder="주소"
 				              class="form-control" name="address" />
 					<span th:if="${#fields.hasErrors('address')}" 
 					      th:errors="*{address}" class="errorField"></span>
