--- a/18_login_board_springbootMVC/src/main/resources/templates/calboard/addcalboardform.html
+++ b/18_login_board_springbootMVC/src/main/resources/templates/calboard/addcalboardform.html
@@ -3,101 +3,74 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout}">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <title>일정 추가하기</title>
 </head>
 <body>
 <div layout:fragment="content">
-	<div id="container">
-		<h1>일정 추가하기</h1>
-		<form th:action="@{/schedule/addcalboard}" method="post"
-								th:object="${insertCalCommand}">
-			<table class="table">
-				<tr>
-					<th>아이디</th>
-					<td>
-						<input type="text" name="id" th:field="*{id}" class="form-control"/>
-						<span class="errorField" th:if="${#fields.hasErrors('id')}"
-						                         th:errors="*{id}"></span>
-					</td>
-				</tr>
-				<tr>
-					<th>일정</th>
-					<td>
-						<select name="year">
-							<th:block th:each="i:${#numbers.sequence(insertCalCommand.year-5,insertCalCommand.year+5)}">
-								<th:block th:if="${insertCalCommand.year==i}">
-									<option selected="selected" th:value="${i}" th:text="${i}"></option>
-								</th:block>
-								<th:block th:unless="${insertCalCommand.year==i}">
-									<option th:value="${i}" th:text="${i}"></option>
-								</th:block>
-							</th:block>
-						</select>년
-						<select name="month">
-							<th:block th:each="i:${#numbers.sequence(1,12)}">
-								<th:block th:if="${insertCalCommand.month==i}">
-									<option selected="selected" th:value="${i}" th:text="${i}"></option>
-								</th:block>
-								<th:block th:unless="${insertCalCommand.month==i}">
-									<option th:value="${i}" th:text="${i}"></option>
-								</th:block>
-							</th:block>
-						</select>월
-						<select name="date">
-							<th:block th:each="i:${#numbers.sequence(1,31)}">
-								<th:block th:if="${insertCalCommand.date==i}">
-									<option selected="selected" th:value="${i}" th:text="${i}"></option>
-								</th:block>
-								<th:block th:unless="${insertCalCommand.date==i}">
-									<option th:value="${i}" th:text="${i}"></option>
-								</th:block>
-							</th:block>
-						</select>일
-						<select name="hour">
-							<th:block th:each="i:${#numbers.sequence(0,23)}">
-								<option th:value="${i}" th:text="${i}"></option>
-							</th:block>
-						</select>시
-						<select name="min">
-							<th:block th:each="i:${#numbers.sequence(0,59)}">
-								<option th:value="${i}" th:text="${i}"></option>
-							</th:block>
-						</select>분
-					</td>
-				</tr>
-				<tr>
-					<th>제목</th>
-					<td>
-						<input type="text" name="title" th:field="*{title}" class="form-control"/>
-						<span class="errorField" th:if="${#fields.hasErrors('title')}"
-						                         th:errors="*{title}"></span>
-					</td>
-				</tr>
-				<tr>
-					<th>내용</th>
-					<td>
-						<textarea rows="10" cols="60" name="content" th:field="*{content}" 
-													class="form-control"></textarea>
-						<span class="errorField" th:if="${#fields.hasErrors('content')}"
-						                         th:errors="*{content}"></span>
-					</td>
-				</tr>
-				<tr>
-					<td colspan="2">
-						<input type="submit" value="일정추가" class="btn"/>	
-						<input type="button" value="달력" class="btn"
-						  th:onclick="|location.href='@{/schedule/calendar}'|"/>				
-					</td>
-				</tr>
-			</table>
-		</form>
-	</div>
+    <div id="container">
+        <h1>일정 추가하기</h1>
+        <form th:action="@{/schedule/addcalboard}" method="post" th:object="${insertCalCommand}">
+            <table class="table">
+                <tr>
+                    <th>아이디</th>
+                    <td>
+                        <input type="text" name="id" th:field="*{id}" class="form-control"/>
+                        <span class="errorField" th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></span>
+                    </td>
+                </tr>
+                <tr>
+                    <th>시작 날짜</th>
+                    <td>
+                        <input type="date" name="startDate" th:value="${insertCalCommand.startDate}" class="form-control"/>
+                        <span class="errorField" th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}"></span>
+                    </td>
+                </tr>
+                <tr>
+                    <th>종료 날짜</th>
+                    <td>
+                        <input type="date" name="endDate" th:field="*{endDate}" class="form-control"/>
+                        <span class="errorField" th:if="${#fields.hasErrors('endDate')}" th:errors="*{endDate}"></span>
+                    </td>
+                </tr>
+                <tr>
+                    <th>시간</th>
+                    <td>
+                        <select name="hour" th:field="*{hour}">
+                            <th:block th:each="i : ${#numbers.sequence(0, 23)}">
+                                <option th:value="${i}" th:text="${i}"></option>
+                            </th:block>
+                        </select>시
+                        <select name="min" th:field="*{min}">
+                            <th:block th:each="i : ${#numbers.sequence(0, 59)}">
+                                <option th:value="${i}" th:text="${i}"></option>
+                            </th:block>
+                        </select>분
+                    </td>
+                </tr>
+                <tr th:if="${#fields.hasErrors('title')}" th:object="${insertCalCommand}">
+                    <th>제목</th>
+                    <td>
+                        <input type="text" name="title" th:field="*{title}" class="form-control"/>
+                        <span class="errorField" th:errors="*{title}"></span>
+                    </td>
+                </tr>
+                <tr>
+                    <th>내용</th>
+                    <td>
+                        <textarea rows="10" cols="60" name="content" th:field="*{content}" class="form-control"></textarea>
+                        <span class="errorField" th:if="${#fields.hasErrors('content')}" th:errors="*{content}"></span>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <input type="submit" value="일정 추가" class="btn"/>
+                        <input type="button" value="달력" class="btn" th:onclick="|location.href='@{/schedule/calendar}'|"/>
+                    </td>
+                </tr>
+            </table>
+        </form>
+    </div>
 </div>
 </body>
 </html>
-
-
-
-
-
