--- a/18_login_board_springbootMVC/src/main/resources/templates/calboard/calendar.html
+++ b/18_login_board_springbootMVC/src/main/resources/templates/calboard/calendar.html
@@ -3,97 +3,86 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout}">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<script type="text/javascript">
-	$(function(){
-		$(".d").hover(function(){// 이벤트관련 메서드: click(), change(), ....
-			//년월일 값을 구하는 작업
-			var aDate=$(this);//마우스가 올라갔을때 a태그객체를 구함
-			var year=$(".y").text().trim();//년도
-			var month=$(".m").text().trim();//월
-			var date=aDate.text().trim();//일  <a>5</a>
-			var yyyyMMdd=year+(month.length<2?"0"+month:month)
-                             +(date.length<2?"0"+date:date)
-			console.log(yyyyMMdd);
-			$.ajax({
-				url:"/schedule/calcountajax", // 요청할 URL
-				method:"get",
-				data:{"yyyyMMdd":yyyyMMdd}, // server로 전달할 파라미터
-				dataType:"json", // server에서 전달되는 파라미터 타입 정의
-				async:false, // ajax()메서드의 실행을 비동기식으로 실행할건지 정의
-				success:function(data){//server에서 전달된 값을 data변수가 받는다
-// 					alert(data.count);
-					aDate.after("<div class='cp'>"+data.count+"</div>");//after():target요소의 다음에 추가하는 기능
-				},
-				error:function(){
-					alert("통신실패");
-				}
-			});
-		},function(){
-			$(".cp").remove();//마우스가 나갔을때 일정개수 요소를 삭제
-		});// hover(func(),func())
-	});
-</script>
-<style type="text/css">
-	.cal #tbody > div{
-		position: relative;
-	}
-
-	.cp{
-		position: absolute;
-    	left: 20px;
-    	top:-30px;
-    	width: 40px;
-    	height: 40px;
-    	border-radius:20px 20px 20px 1px;
-    	background-color: pink;
-    	line-height: 40px;
-    	text-align: center;
-    	font-weight: bold;
-	}
-</style>
+    <meta charset="UTF-8">
+    <title>Insert title here</title>
+    <script type="text/javascript">
+        $(function() {
+            $(".d").hover(function() {
+                var aDate = $(this);
+                var year = $(".y").text().trim();
+                var month = $(".m").text().trim();
+                var date = aDate.text().trim();
+                var yyyyMMdd = year + (month.length < 2 ? "0" + month : month) + (date.length < 2 ? "0" + date : date);
+                console.log(yyyyMMdd);
+                $.ajax({
+                    url: "/schedule/calcountajax",
+                    method: "get",
+                    data: {"yyyyMMdd": yyyyMMdd},
+                    dataType: "json",
+                    async: false,
+                    success: function(data) {
+                        aDate.after("<div class='cp'>" + data.count + "</div>");
+                    },
+                    error: function() {
+                        alert("통신실패");
+                    }
+                });
+            }, function() {
+                $(".cp").remove();
+            });
+        });
+    </script>
+    <style type="text/css">
+        .cal #tbody > div {
+            position: relative;
+        }
+        .cp {
+            position: absolute;
+            left: 20px;
+            top: -30px;
+            width: 40px;
+            height: 40px;
+            border-radius: 20px 20px 20px 1px;
+            background-color: pink;
+            line-height: 40px;
+            text-align: center;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-<div layout:fragment="content" >
-	<div id="container">
-		<h1>영화 일정</h1>
-		<div class="cal">
-			<div id="ctitle">
-				<a th:href="@{/schedule/calendar(year=${calMap.year-1},month=${calMap.month})}">◁</a>
-				<a th:href="@{/schedule/calendar(year=${calMap.year},month=${calMap.month-1})}">◀</a>
-				<span class="y" th:text="${calMap.year}"></span>
-				<span>년</span>
-				<span class="m" th:text="${calMap.month}"></span>
-				<span>월</span>
-				<a th:href="@{/schedule/calendar(year=${calMap.year},month=${calMap.month+1})}">▶</a>
-				<a th:href="@{/schedule/calendar(year=${calMap.year+1},month=${calMap.month})}">▷</a>
-			</div>
-			<div id="thead">
-				<div>일</div><div>월</div><div>화</div><div>수</div>
-				<div>목</div><div>금</div><div>토</div>
-			</div>
-			<div id="tbody">
-				<th:block th:if="${calMap.dayOfWeek>1}">
-					<div th:each="num:${#numbers.sequence(1,calMap.dayOfWeek-1)}">&nbsp;</div>
-				</th:block>
-				<th:block th:each="i:${#numbers.sequence(1,calMap.lastDay)}">
-					<div>
-						<a class="d" th:text="${i}"
+<div layout:fragment="content">
+    <div id="container">
+        <h1>영화 일정</h1>
+        <div class="cal">
+            <div id="ctitle">
+                <a th:href="@{/schedule/calendar(year=${calMap.year-1},month=${calMap.month})}">◁</a>
+                <a th:href="@{/schedule/calendar(year=${calMap.year},month=${calMap.month-1})}">◀</a>
+                <span class="y" th:text="${calMap.year}"></span><span>년</span>
+                <span class="m" th:text="${calMap.month}"></span><span>월</span>
+                <a th:href="@{/schedule/calendar(year=${calMap.year},month=${calMap.month+1})}">▶</a>
+                <a th:href="@{/schedule/calendar(year=${calMap.year+1},month=${calMap.month})}">▷</a>
+            </div>
+            <div id="thead">
+                <div>일</div><div>월</div><div>화</div><div>수</div><div>목</div><div>금</div><div>토</div>
+            </div>
+            <div id="tbody">
+                <th:block th:if="${calMap.dayOfWeek>1}">
+                    <div th:each="num:${#numbers.sequence(1,calMap.dayOfWeek-1)}">&nbsp;</div>
+                </th:block>
+                <th:block th:each="i:${#numbers.sequence(1,calMap.lastDay)}">
+                    <div>
+                        <a class="d" th:text="${i}"
 						   th:href="@{/schedule/calboardlist(year=${calMap.year},month=${calMap.month},date=${i})}"></a>
-						<a th:href="@{/schedule/addcalboardform(year=${calMap.year},month=${calMap.month},date=${i})}">
-							<img class="pen" th:src="@{/img/pen.png}" />
-						</a>
-						[(${@util.getCalViewList(i,clist)})]
-					</div>
-				</th:block>
-			</div>
-		</div>
-	</div>
+						   <a  th:href="@{/schedule/addcalboardform(startDate=|${calMap.year}-${#numbers.formatInteger(calMap.month, 2)}-${#numbers.formatInteger(i, 2)}|)}">
+                            <img class="pen" th:src="@{/img/pen.png}" />
+                        </a>
+                        [(${@util.getCalViewList(i, clist)})]
+                    </div>
+                </th:block>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
-
-
-
-
