--- a/18_login_board_springbootMVC/src/main/resources/static/css/layout.css
+++ b/18_login_board_springbootMVC/src/main/resources/static/css/layout.css
@@ -113,9 +113,10 @@ a{
 
 
 #tbody div > p{
-	background-color: orange;
+	background-color: rgb(128, 255, 128);
 	margin: 2px;
 	padding: 1px;
 	font-weight: bold;
+	min-height:25px;
 }
 
