--- a/18_login_board_springbootMVC/src/main/resources/templates/calboard/addcalboardform.html
+++ b/18_login_board_springbootMVC/src/main/resources/templates/calboard/addcalboardform.html
@@ -64,6 +64,7 @@
                 </tr>
                 <tr>
                     <td colspan="2">
+                    	 <input type="color" name="color" value="#ff0000">
                         <input type="submit" value="일정 추가" class="btn"/>
                         <input type="button" value="달력" class="btn" th:onclick="|location.href='@{/schedule/calendar}'|"/>
                     </td>
