--- a/18_login_board_springbootMVC/src/main/resources/templates/calboard/calendar.html
+++ b/18_login_board_springbootMVC/src/main/resources/templates/calboard/calendar.html
@@ -35,7 +35,10 @@
     <style type="text/css">
         .cal #tbody > div {
             position: relative;
+            min-height: 30px;
         }
+        
+        /* 클래스 할당된 날짜에 마우스 올렸을때 동적생성 */
         .cp {
             position: absolute;
             left: 20px;
