--- a/18_login_board_springbootMVC/src/main/resources/templates/board/boardDetail.html
+++ b/18_login_board_springbootMVC/src/main/resources/templates/board/boardDetail.html
@@ -1,88 +1,64 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	  layout:decorate="~{layouts/layout}">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/layout}">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>게시글 상세보기</title>
 <script type="text/javascript">
-	function updateEX(){
-		if(confirm("수정하시겠습니까?")){
-			return true;
-		}
-		return false
-	}
+    // 예약 버튼 클릭 시 확인 메시지 표시
+    function toggleReservation(){
+        if(confirm("예약하시겠습니까?")){
+            // 예약 요청을 서버로 보낸 후 목록 페이지로 이동
+            document.getElementById("reservationForm").submit();
+        }
+    }
 </script>
-<style type="text/css">
-
-</style>
 </head>
 <body>
 <div layout:fragment="content">
-<div id="container">
-<h1>상세보기</h1>
-<form action="/board/boardUpdate" method="post" onsubmit="return updateEX()"
-								th:object="${updateBoardCommand}">
-	<input type="hidden" name="board_seq"  th:value="${dto.board_seq}"/>
-	<table class="table">
-		<tr>
-			<th>작성자[ID]</th>
-			<td th:text="${dto.id}"></td>
-		</tr>
-		<tr>
-			<th>제목</th>
-			<td>
-				<input type="text" name="title" th:value="${dto.title}"
-												class="form-control"/>
-				<span th:if="${#fields.hasErrors('title')}" 
-					  th:errors="*{title}" class="errorField"></span>
-			</td>
-		</tr>
-		<tr>
-			<th>파일 [[${#lists.size(dto.fileBoardDto)}]]</th>
-			<th:block th:if="${dto.fileBoardDto[0].origin_filename==null}">
-				<td>첨부파일없음</td>
-			</th:block>
-			<th:block th:unless="${dto.fileBoardDto[0].origin_filename==null}">
-				<td>
-					<th:block th:each="fdto:${dto.fileBoardDto}">
-						<span class="glyphicon glyphicon-folder-open"></span>
-						<a th:text="${fdto.origin_filename}"
-						   th:href="@{/board/download(file_seq=${fdto.file_seq})}" ></a>&nbsp;&nbsp;
-					</th:block>
-				</td>
-			</th:block>
-		</tr>
-		<tr>
-			<th>내용</th>
-			<td>
-				<textarea rows="10" cols="60" name="content"
-						  th:text="${dto.content}"
-				          class="form-control"></textarea>
-				<span th:if="${#fields.hasErrors('content')}" 
-					  th:errors="*{content}" class="errorField"></span>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-<!-- 				<th:block th:if="${session.mdto!=null&&session.mdto.id==dto.id}"> -->
-					<button type="submit" class="btn">수정</button>
-					<button type="button" class="btn"
-					 th:onclick="|location.href='@{/board/mulDel(seq=${dto.board_seq})}'|">삭제</button>
-<!-- 				</th:block> -->
-				<button type="button" class="btn"
-				 th:onclick="|location.href='@{/board/boardList}'|">목록</button>
-			</td>
-		</tr>
-	</table>
-</form>
-</div>
+    <div id="container">
+        <h1>게시글 상세보기</h1>
+        <form action="/board/boardUpdate" method="post" onsubmit="return updateEX()" th:object="${updateBoardCommand}">
+            <input type="hidden" name="board_seq" th:value="${dto.board_seq}"/>
+            <table class="table">
+                <tr>
+                    <th>작성자[ID]</th>
+                    <td th:text="${dto.id}"></td>
+                </tr>
+                <tr>
+                    <th>제목</th>
+                    <td>
+                        <input type="text" name="title" th:value="${dto.title}" class="form-control"/>
+                        <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="errorField"></span>
+                    </td>
+                </tr>
+                <tr>
+                    <th>내용</th>
+                    <td>
+                        <textarea rows="10" cols="60" name="content" th:text="${dto.content}" class="form-control"></textarea>
+                        <span th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="errorField"></span>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <button type="submit" class="btn">수정</button>
+                        <button type="button" class="btn" th:onclick="|location.href='@{/board/mulDel(seq=${dto.board_seq})}'|">삭제</button>
+                        <button type="button" class="btn" th:onclick="|location.href='@{/board/boardList}'|">목록</button>
+                    </td>
+                </tr>
+                <tr>
+                    <!-- 예약 버튼 -->
+                    <td colspan="2">
+                        <form id="reservationForm" action="/board/reserve" method="post">
+                            <input type="hidden" name="board_seq" th:value="${dto.board_seq}"/>
+                            <button type="button" class="btn btn-success" onclick="toggleReservation()">예약</button>
+                        </form>
+                    </td>
+                </tr>
+            </table>
+        </form>
+    </div>
 </div>
 </body>
 </html>
-
-
-
-
-
-
