--- a/18_login_board_springbootMVC/src/main/resources/templates/fragments/header.html
+++ b/18_login_board_springbootMVC/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-   xmlns:th="http://www.thymeleaf.org">
+	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
@@ -9,38 +9,38 @@
 </style>
 </head>
 <body>
-   <header th:fragment="header" class="header">
-    <div class="container">
-   <div class="navbar-header">
-     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-       <span class="sr-only">Toggle navigation</span>
-       <span class="icon-bar"></span>
-       <span class="icon-bar"></span>
-       <span class="icon-bar"></span>
-     </button>
-   </div>
+	<header th:fragment="header" class="header">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+					aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+			</div>
 
-      <div id="navbar" class="collapse navbar-collapse">
-         <ul class="nav navbar-nav">
-            <a class="navbar-brand" href="/">Home</a>
-            <li class="#login"><a href="/user/login">로그인</a></li>
-            <li><a href="/user/addUser">회원가입</a></li>
-            <li><a href="#">나의정보</a></li>
-            <li><a href="/board/boardList">게시판</a></li>
-            <li><a href="/schedule/calendar">일정확인</a></li>
-            
-         </ul>
-         <th:block th:unless="${session.mdto==null}">
-   <p>
-      <span th:text="${session.mdto.role}"></span>
-      <span th:text="${session.mdto.id}"></span>
-      <a href="/user/logout">로그아웃</a>
-   </p>
-</th:block>
-      </div>
-      
-      </div>
-   </header>
-   <div style="height: 150px;"></div>
+			<div id="navbar" class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<a class="navbar-brand" href="/">Home</a>
+					<li class="#login"><a href="/user/login">로그인</a></li>
+					<li><a href="/user/addUser">회원가입</a></li>
+					<li><a href="/board/myReservations">나의정보</a></li>
+					<li><a href="/board/boardList">게시판</a></li>
+					<li><a href="/schedule/calendar">일정확인</a></li>
+
+				</ul>
+				<th:block th:unless="${session.mdto==null}">
+					<p>
+						<span th:text="${session.mdto.role}"></span> <span
+							th:text="${session.mdto.id}"></span> <a href="/user/logout">로그아웃</a>
+					</p>
+				</th:block>
+			</div>
+
+		</div>
+	</header>
+	<div style="height: 150px;"></div>
 </body>
 </html>
